--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1117,7 +1117,7 @@ html:lang(fr) .cnjnctn-or:before {
             <div class="alert alert-info">
               <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                 You may qualify for an exemption from paying the tax</h4>
-              <p>Indicate your exemption in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#pt4">parts 4-6 of your Underused Housing Tax return</a>.</p>
+              <p>Indicate your exemption in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#pt4">Parts 4-6 of your Underused Housing Tax return</a>.</p>
               <br>
               <div class="hidden" id="ex1">
                 <p class="pull-left">Review tax notices:</p>
