--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1295,8 +1295,9 @@ html:lang(fr) .cnjnctn-or:before {
               </ul>
               <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Determine if your residential property is located in an eligible area of Canada for the purposes of this exemption by using the <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a>.</p>
             </div>
-            <p class="mrgn-tp-lg">Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank"> UHTN5, Exemption for vacation properties </a></p>
-          <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
+            <p class="mrgn-tp-lg">Review tax notices:</p>
+		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank"> UHTN5, Exemption for vacation properties </a></p>
+          <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
 	  </details>
         </details>
         <p class="mrgn-tp-md">If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
