uhtn14 to exemptions

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1141,7 +1141,8 @@ html:lang(fr) .cnjnctn-or:before {
                 <p class="pull-left">Review tax notice:</p>
                 <ul class="pull-left mrgn-lft-md list-unstyled small">
                   <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank">UHTN5, Exemption for vacation properties</a></li>
-                </ul>
+               <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html" target="_blank">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></li>
+		</ul>
                 <div class="clearfix">&nbsp;</div>
               </div>
               <div class="hidden" id="ex4">
