--- a/payroll/file/amend.html
+++ b/payroll/file/amend.html
@@ -53,7 +53,7 @@
                 title: "Payroll",
                 href: "../index.html"
               },{
-                title: "File information returns (slips and summaries)",
+                title: "File payroll information returns (slips and summaries)",
                 href: "index.html"
               },{
                 title: "Make corrections after filing",
@@ -68,7 +68,7 @@
          <main role="main" property="mainContentOfPage" class="container">
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">File information returns (slips and summaries)</h1>
+  <h1 id="gc-document-nav">File payroll information returns (slips and summaries)</h1>
   <ul>
     
     <li>
