--- a/payroll/file/correct.html
+++ b/payroll/file/correct.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Correct deduction errors - File information returns (slips and summaries) - Canada.ca</title>
+         <title>Correct deduction errors - File payroll information returns (slips and summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -55,7 +55,7 @@
                 title: "Payroll",
                 href: "../index.html"
               },{
-                title: "File information returns (slips and summaries)",
+                title: "File payroll information returns (slips and summaries)",
                 href: "index.html"
               },{
                 title: "Make corrections after filing",
@@ -70,7 +70,7 @@
          <main role="main" property="mainContentOfPage" class="container">
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">File information returns (slips and summaries)</h1>
+  <h1 id="gc-document-nav">File payroll information returns (slips and summaries)</h1>
   <ul>
     
     <li>
