--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -856,7 +856,7 @@
 <dt>No deductions</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 17A if you <strong>did not</strong> deduct <abbr title="Second Quebec Pension Plan">QPP2</abbr>.</p></dd>
 
-<dt>Province of employment is Quebec</dt>
+<dt>Province of employment is not Quebec</dt>
 <dd> <p><strong>Do not </strong>report any amount using box 17A if box 10 shows their province of employment is other than Quebec, use <a href="#bx_16a">box 16A</a>.</p>
      </dd>
 
@@ -918,7 +918,7 @@
  </dd>
 </dl>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnei.html">About the deduction of Employment Insurance (EI) premiums</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnei.html">About the deduction of Employment Insurance (EI) premiums</a></p>         
 
             </details>
 </li>
