--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -264,7 +264,7 @@
 <p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers <strong>only</strong> to an worker who is registered or entitled to be registered under the Indian Act. Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
 
 
-<p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
+<p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
 <ul>
 <li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> </li>
 <li><a href="#subtab2" class="wb-tabs-ext">Employment-related income</a> (for example, pension income, retiring allowances, RRSP and CPP/QPP)</li>
