--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1735,11 +1735,10 @@
 <details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-search-location text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details>
+<h3>Employee performing services on behalf of their own corporation</h3>
+<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business. </p>
 
-<p class="mrgn-tp-md">If an employee performs services on behalf of their own corporation, continue to <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. This may be considered a personal services business. </p>
-
-<p class="mrgn-tp-md">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
-</div>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
       </details>
  <details>
@@ -1781,6 +1780,12 @@
 </div>
 </div>
 
+<nav class="mrgn-bttm-lg mrgn-tp-lg">
+  <h3 class="wb-inv">Document navigation</h3>
+  <ul class="pager">
+    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span> Understand the income tax, payroll and GST/HST tax obligations</a></li>
+  </ul>
+</nav>	
 
 <section id="psb" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
