--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -1511,7 +1511,7 @@
 </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor7"> <span class="fas fa-piggy-bank text-info"> </span>&nbsp;&nbsp; Factor 7 - Opportunity for profit (incorporated employee (such as PSBs) or a self-employed through their own Corporation) </h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor7"> <span class="fas fa-piggy-bank text-info"> </span>&nbsp;&nbsp; Factor 7 - Opportunity for profit </h2></summary>
 <p id="7">Consider whether the worker can realize a profit or incur a loss, as this indicates that a worker controls the business aspects of services rendered and that a business relationship likely exists. To have a chance of a profit and a risk of a loss, a worker has to have potential proceeds and expenses, and one could exceed the other.</p>
 <details><summary>Consider this factor from the worker's perspective</summary>
 <p>This factor has to be considered from the worker's perspective, not the payer's. It is for the most part an assessment of the degree to which the worker can control their proceeds and expenses.</p>
@@ -1736,7 +1736,7 @@
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details>
 <h3>Employee performing services on behalf of their own corporation</h3>
-<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business. </p>
+<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
