--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -979,7 +979,7 @@
 </details>
 
 <h3>Employee performing services on behalf of their own corporation</h3>
-<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business. </p>
+<p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
