--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -978,17 +978,13 @@
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details>
 
-<h3>Employee performing services on behalf of their own corporation</h3>
+<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-address-card text-info"> </span>&nbsp;&nbsp; Employee performing services through their own corporation</h2></summary> 
 <p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
-<nav class="mrgn-bttm-lg mrgn-tp-lg">
-  <h3 class="wb-inv">Document navigation</h3>
-  <ul class="pager">
-    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span> Understand the income tax, payroll and GST/HST tax obligations</a></li>
-  </ul>
-</nav>	
+</details>
+
 </div>
 
  </details>
@@ -997,7 +993,12 @@
      <p id="tab2">RC4110 Rev. 22</p>
   <div data-ajax-replace="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html"></div>
 </details></div></div>
-
+<nav class="mrgn-bttm-lg mrgn-tp-lg">
+  <h3 class="wb-inv">Document navigation</h3>
+  <ul class="pager">
+    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span> Understand the income tax, payroll and GST/HST tax obligations</a></li>
+  </ul>
+</nav>	
 	 
 <h2 id="h-4">References</h2>
 
