--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,7 +261,10 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers <strong>only</strong> to an worker who is registered or entitled to be registered under the Indian Act. Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
+<div id="ajax-fnterm">
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers <strong>only</strong> to an worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+ </div>
+<p>Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
 
 
 <p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
@@ -305,7 +308,7 @@
 <p>You must also certify that information you provided on Form TD1-IN is correct and complete.</p>
 
 <details><summary>What if the First Nations employee's employment situation changes</summary>
-<p>If the facts of the First Nations employee’s employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
+<p>If the facts of the  <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee’s <span class="far fa-question-circle"></span></a> employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> A change in the First Nations employee’s residence, on or off reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> A change in the employer’s residence, on or off reserve</li>
@@ -666,7 +669,7 @@
 <li><h3 id="tab2-step2">Determine the percentage of employment-related income that was exempt</h3>
  <div id="ajax-how-tab2-step2-prorate">
  
-<p>You need to determine the portion of the employment-related income of the First Nations employee that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
+<p>You need to determine the portion of the employment-related income of the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
 
 <p>If the employment-related income is related to <strong>all tax-exempt</strong> First Nations employment income, the  employment-related income will <strong>all be exempt</strong>.</p>
 
@@ -755,7 +758,7 @@
 <div id="ajax-reg-tab3">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>The self-employment income earned by the First Nations worker must be situated on a reserve to be exempt from tax. </p>
+<p>The self-employment income earned by the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker <span class="far fa-question-circle"></span></a> must be situated on a reserve to be exempt from tax. </p>
 
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
@@ -881,7 +884,7 @@
 <div id="ajax-reg-tab4">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
+<p>The self-employment income earned by the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker <span class="far fa-question-circle"></span></a> must be  situated on a reserve to be exempt from tax. </p>
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
@@ -1016,6 +1019,12 @@
     <li class="next"><a href="../how/index.html" rel="next"><span class="wb-inv">Next: </span>How to calculate</a></li>
   </ul>
 </nav>
+
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations worker </h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-fnterm"></div>
+	</div></section>
+
 
 
 <section id="reg" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine if the employee is registered</h2>
