--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -146,7 +146,7 @@
             <div class="wb-tabs">
                <div class="tabpanels">
                   <details id="tab-reg">
-                     <summary><br class="visible-lg">Regular payments (CPP tables)</summary>
+                     <summary>Regular payments (CPP tables)</summary>
                  
 <p class="mrgn-tp-md">CPP contribution tables calculate the required CPP contribution for you on given ranges of income for a specified pay period. The share of the annual exemption for that pay period has already been factored into these calculations.</p>
 
@@ -561,7 +561,7 @@
                   </details>
 
  <details id="tab-reg2">
-                     <summary><br class="visible-lg">Regular payments at irregular intervals</summary>
+                     <summary>Regular payments at irregular intervals</summary>
   <p class="mrgn-tp-md">Use this method if you make regular payments at irregular intervals (not paid regularly) to calculate the required CPP contribution. This may include payments for:</p>
 <ul> 
 <li>commissions paid at irregular intervals</li>
@@ -971,7 +971,7 @@
                      </ol>
                   </details>
                 <details id="tab-mnl" >
-                     <summary><br class="visible-lg">Regular payments (manual calculation)</summary>
+                     <summary>Regular payments (manual calculation)</summary>
  <p class="mrgn-tp-md">You can use the manual calculation method to calculate the CPP contribution that must be withheld for all <strong>regular payments</strong> made to your employees in a pay period without using the CPP tables. </p>		  	
   
 <p><strong>Continue to other tabs</strong> for other types of specific payments.</p>	                   
