--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -153,7 +153,7 @@
  <div class="wb-tabs">
                <div class="tabpanels">
  <details id="tab-reg">
-                     <summary>Regular payments (tax tables)</summary>
+                     <summary><br class="visible-lg">Regular payments (tax tables)</summary>
                  
 <p class="mrgn-tp-md">Income tax tables calculate the required income tax for you on given ranges of income for a specified pay period. </p>
 
@@ -1800,7 +1800,7 @@
    </details>
 
 <details id="tab-retro" >
-                     <summary>Retroactive payments</summary>
+                     <summary><br class="visible-lg">Retroactive payments</summary>
    <p class="mrgn-tp-md">In addition to regular types of payments, you must deduct income tax from retroactive payments.</p>
             <h3>Steps</h3>
                      <ol class="lst-stps stps-strpd">
@@ -2311,7 +2311,7 @@
      
 
  <details id="tab-bonus" >
-                     <summary>Bonus or irregular payments</summary>
+                     <summary><br class="visible-lg">Bonus or irregular payments</summary>
                      <p class="mrgn-tp-md">In addition to regular types of payments, you must deduct income tax from bonuses or other types of irregular payments. </p>
 <details><summary>Types of irregular payments</summary>
 <p>Irregular payments includes:</p>
@@ -3308,7 +3308,7 @@
 
    </details>
 
-<details id="tab-lump"> <summary>Lump-sum payments</summary>
+<details id="tab-lump"> <summary><br class="visible-lg">Lump-sum payments</summary>
 <p class="mrgn-tp-md">In addition to regular types of payments, you must deduct income tax from lump-sum payments. </p>
 
  <h3 class="mrgn-tp-md">Steps</h3>
