--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -289,7 +289,7 @@
   <div class="wb-tabs mrgn-tp-lg">
     <div class="tabpanels">
       <details id="subtab1">
-        <summary>Employment income</summary>
+        <summary><br class="visible-lg">Employment income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
@@ -639,7 +639,7 @@
  </details>
  
  <details id="subtab2">
-        <summary>Employment-related income</summary>
+        <summary><br class="visible-lg"><br class="visible-lg">Employment-related income</summary>
 
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
@@ -750,7 +750,7 @@
 
 
  <details id="subtab3">
-        <summary>Self-employed fishing, barber or hairdresser, driver income</summary>
+        <summary><br class="visible-lg">Self-employed fishing, barber or hairdresser, driver income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
