--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -262,9 +262,9 @@
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
 <div id="ajax-fnterm">
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers <strong>only</strong> to an worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations employee or worker on this page refers <strong>only</strong> to an employee or a worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
  </div>
-<p>Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
+<p>Many Indigenous people in Canada prefer not to describe themselves as Indians and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
 
 
 <p>Determine your withholding and reporting obligations based on the type of income you paid to the worker:</p>
