--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -1020,7 +1020,7 @@
   </ul>
 </nav>
 
-<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations worker </h2>
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-fnterm"></div>
 	</div></section>
