--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -298,7 +298,7 @@
 <div id="ajax-reg">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>To determine if the First Nations employment income is tax-exempt or partially tax-exempt, ask your employee to fill out part 1 of Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
+<p>To determine if the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee’s <span class="far fa-question-circle"></span></a> employment income is tax-exempt or partially tax-exempt, ask your employee to fill out part 1 of Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Your employee is registered under the Indian Act</li> 	 
@@ -308,7 +308,7 @@
 <p>You must also certify that information you provided on Form TD1-IN is correct and complete.</p>
 
 <details><summary>What if the First Nations employee's employment situation changes</summary>
-<p>If the facts of the  <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee’s <span class="far fa-question-circle"></span></a> employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
+<p>If the facts of the First Nations employee's employment situation change over the course of the year, you may need to reexamine whether the tax exemption will still apply. Changes that requires you to reexamine whether the income will be exempt from tax for the remainder of the year include:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> A change in the First Nations employee’s residence, on or off reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> A change in the employer’s residence, on or off reserve</li>
@@ -648,7 +648,7 @@
 <div id="ajax-reg-tab2">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 </div>
-<p>Generally, if the employee is receiving employment-related income, the employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP) is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+<p>Generally, if the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> is receiving employment-related income, the employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP) is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
 <p> <a href="#ajax-type-emp-related" aria-controls="ajax-type-emp-related" class="overlay-lnk" role="button">Type of employment-related income <span class="far fa-question-circle"></span></a> </p>
 
@@ -669,7 +669,7 @@
 <li><h3 id="tab2-step2">Determine the percentage of employment-related income that was exempt</h3>
  <div id="ajax-how-tab2-step2-prorate">
  
-<p>You need to determine the portion of the employment-related income of the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
+<p>You need to determine the portion of the employment-related income of the First Nations employee that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
 
 <p>If the employment-related income is related to <strong>all tax-exempt</strong> First Nations employment income, the  employment-related income will <strong>all be exempt</strong>.</p>
 
