test content in lightbox

--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1010,8 +1010,9 @@ input[type='radio'] {
            
         </aside>
 	    <section id="Y" class="mfp-hide modal-dialog modal-content overlay-def">
-<header class="modal-header"><h2 class="modal-title">[insert heading here, usually same as link text]</h2></header>
+<header class="modal-header"><h2 class="modal-title">Foreign national</h2></header>
 <div class="modal-body">
+	<p>Testing content</p>
 </div>
 </section>
 	    
