remove temp res

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -884,7 +884,7 @@ html:lang(fr) .cnjnctn-or:before {
                       </ul>
                     </div>
                   </li>
-                  <li>A foreign national or temporary resident of Canada
+                  <li>A foreign national
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                       <div class="wb-fieldflow-header">
                         <p class="wb-fieldflow-label"><span id="labelledby6a" aria-labelledby="labelledby6a labelledby6b">Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</span></p>
