--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -548,7 +548,7 @@
  </li>
 
 <li><h3 id="step4">Withhold deductions on the employment income paid to your First Nations employee</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment income paid to your First Nations employee depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment income you paid to your First Nations employee depending if the income is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
@@ -630,7 +630,7 @@
 </li>
 
 </ul>
-<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted CPP, EI or income tax from the payment.</p>   
 	 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
 </li>
@@ -648,7 +648,7 @@
 <div id="ajax-reg-tab2">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 </div>
-<p>Generally, if the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> is receiving employment-related income, the employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP) is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+<p>Generally, if the <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations recipient <span class="far fa-question-circle"></span></a> is receiving employment-related income, the employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP) is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
 <p> <a href="#ajax-type-emp-related" aria-controls="ajax-type-emp-related" class="overlay-lnk" role="button">Type of employment-related income <span class="far fa-question-circle"></span></a> </p>
 
@@ -721,7 +721,7 @@
 <li class="cnjnctn-col"><h4>Partly-exempt</h4>
 <h5>Other income</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Code 28 <small>- Report <strong>taxable</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 028 <small>- Report <strong>taxable</strong> other income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul>
 <h5>Pension or superannuation</h5>
@@ -739,7 +739,7 @@
 </li>
 </ul>
 
-<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>     
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted income tax from the payment.</p>     
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 </li>
@@ -764,7 +764,7 @@
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
 <details><summary>How to apply the factors for <strong>self-employed fishing</strong> income</summary>
-<p>You must apply the <a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">factors for self-employed fishing income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
+<p>You need to consider other factors when you apply the <a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">connecting factors test for self-employed fishing income<span class="far fa-question-circle"></span></a>. </p>
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 </details>
 
@@ -788,6 +788,8 @@
  
 <p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
 
+<p>Generally, the income is fully exempt from income tax if the self-employed First Nations worker’s income-earning activities take place on reserve.</p>
+
 <p>Generally, the income is partly-exempt from income tax if part of the self-employed First Nations worker's income-earning activities take place on reserve and part off of a reserve. </p>
 
 <p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve.</p>
@@ -797,13 +799,13 @@
 
 </li>
 
-<li><h3 id="tab3-step3">Withhold deductions on the employment income paid to your First Nations worker</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the self-employment income paid to the First Nations worker regardless if the income is exempt or partly-exempt:</p>
+<li><h3 id="tab3-step3">Remit deductions on the employment income paid to your First Nations worker</h3>
+<p class="mrgn-bttm-lg">Generally, you must remit the following deductions on the self-employment income paid to the First Nations worker in these industries regardless if the income is exempt or partly-exempt:</p>
 
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>  
- <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-  <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> remit</small></li>  
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Remit  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
+  <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> remit</small></li>
  </ul>
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
@@ -836,7 +838,7 @@
 <li class="cnjnctn-col"><h4>Partly-exempt</h4>
 <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small>- Use the appropriate self-employment code</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Box 29 <small>- Use the appropriate self-employment code</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small>- Report <strong>taxable income</strong> of <strong>self-employed fishers</strong></small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 82  <small>- Report <strong>taxable income</strong> of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong></small></li>
@@ -846,16 +848,16 @@
  <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
- if you withheld RPP contributions (you must provide proof to to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
+ if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
 </ul>
 
 <h5>Union dues</h5>
  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
 </ul>
 
 </li></ul>
-<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted tax from the payment.</p>   
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted income tax from the payment or remitted EI.</p>   
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
 
